@@ -1,4 +1,4 @@
-$NetBSD: pcidevs,v 1.770 2006/03/06 08:23:00 martin Exp $
+$NetBSD: pcidevs,v 1.771 2006/03/06 18:35:24 bouyer Exp $
 
 /*
  * Copyright (c) 1995, 1996 Christopher G. Demetriou
@@ -2660,6 +2660,7 @@ product SERVERWORKS OSB4_USB		0x0220	OSB4/CSB5 USB Host Controller
 product SERVERWORKS CSB6_USB		0x0221	CSB6 USB Host Controller
 product SERVERWORKS CSB5_LPC		0x0225	CSB5 ISA/LPC bridge
 product SERVERWORKS CSB6_LPC		0x0227	CSB6 ISA/LPC bridge
+product SERVERWORKS K2_SATA		0x0240	K2 SATA
 product SERVERWORKS BCM5714		0x0103	bcm5714/bcm5715 integral PCI-E to PCI-X bridge
 
 /* SGI products */
